Prevent the topology context menu items from truncating

--- a/frontend/packages/topology/src/components/graph-view/components/ContextMenu.scss
+++ b/frontend/packages/topology/src/components/graph-view/components/ContextMenu.scss
@@ -6,6 +6,9 @@
     --pf-v6-c-dropdown__menu-item--PaddingBottom: 0;
     --pf-v6-c-dropdown__menu-item--PaddingLeft: 0;
   }
+  .pf-v6-c-menu__list-item {
+    min-width: auto; // prevent topology content menu items from truncating
+  }
 }
 
 :root:where(.pf-v6-theme-dark) .pf-v6-c-dropdown__menu-item-icon {
